--- a/Account.html
+++ b/Account.html
@@ -27,6 +27,7 @@ html,body{
       background:white;
       padding:2px 5px;
       text-align:left;
+      font-size:60px;
        margin:10px;
       border-top-left-radius:10px;
       border-top-right-radius:10px;
