--- a/Account.html
+++ b/Account.html
@@ -7,6 +7,7 @@
 *{
   margin: 0;
   padding: 0;
+  font-size:70px;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
@@ -48,7 +49,7 @@ html,body{
 }
 .wrapper .title-text{
   display: flex;
-  width: 100%;
+  width: 200%;
 }
 .wrapper .title{
   width: 50%;
