--- a/Account.html
+++ b/Account.html
@@ -42,6 +42,7 @@ html,body{
 .wrapper{
   overflow: hidden;
   max-width: 790px;
+  height:900px;
   background: #fff;
   padding: 30px;
   border-radius: 15px;
