--- a/Account.html
+++ b/Account.html
@@ -42,7 +42,7 @@ html,body{
 .wrapper{
   overflow: hidden;
   max-width: 1000px;
-  height:1200px;
+  height:1500px;
   background: #fff;
   padding: 50px;
   border-radius: 15px;
@@ -158,10 +158,12 @@ input[type="radio"]{
 }
 .form-inner form .pass-link{
   margin-top: 5px;
+  font-size:20px;
 }
 .form-inner form .signup-link{
   text-align: center;
   margin-top: 30px;
+  font-size:20px;
 }
 .form-inner form .pass-link a,
 .form-inner form .signup-link a{
