--- a/Account.html
+++ b/Account.html
@@ -54,7 +54,8 @@ html,body{
 }
 .wrapper .title{
   width: 50%;
-  font-size: 60px;
+  font-size: 70px;
+  text-transform:uppercase;
   font-weight: 500;
   text-align: center;
   transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
