--- a/Account.html
+++ b/Account.html
@@ -51,6 +51,7 @@ html,body{
 .wrapper .title-text{
   display: flex;
   width: 200%;
+  text-transform:uppercase;
 }
 .wrapper .title{
   width: 50%;
