--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ nav ul.active {
             <a href="#team">Team</a>
           </li>
           <li>
-            <a href="#contact">Contact</a>
+            <a href="contact.html">Contact</a>
           </li>
           <li>
             <a href="Account.html">Sign In / Sign Out</a>
