--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ nav ul.active {
   <body>
     <header>
       <nav>
-        <a href="#home" id="logo">Site Logo</a>
+        <a href="#home" id="logo"> @_Somnath_Pal </a>
         <i class="fas fa-bars" id="ham-menu"></i>
         <ul id="nav-bar">
           <li>
