--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@ nav a {
   text-decoration: none;
 }
 nav a#logo {
-  color: #000000;
+  color:white;
   font-weight: 700;
 }
 nav ul a {
   color: #ffffff;
-  font-weight: 600;
+  font-weight:500;
 }
 nav ul a:hover {
   border-bottom: 2px solid #ffffff;
