--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ nav a {
 }
 nav a#logo {
   color:white;
-  font-weight: 700;
+  font-weight:500;
 }
 nav ul a {
   color: #ffffff;
@@ -124,7 +124,7 @@ nav ul.active {
   <body>
     <header>
       <nav>
-        <a href="#home" id="logo"> @_Somnath_Pal </a>
+        <a href="#home" id="logo"> @_Somnath </a>
         <i class="fas fa-bars" id="ham-menu"></i>
         <ul id="nav-bar">
           <li>
